Fix bug where dropdown list is being covered by other elements on the page

--- a/components/Searchbar.module.css
+++ b/components/Searchbar.module.css
@@ -50,6 +50,8 @@
     margin-top: 5px;
     border-radius: 12px;
 
+    z-index: 1;
+
     /* Hides extra background color clipping against rounded corners when an dropdown entry is selected */
     overflow: hidden;
 }
